@@ -678,6 +678,8 @@
 		5078B52A0E3E43540004233A /* QuartzCore.framework in Frameworks */ = {isa = PBXBuildFile; fileRef = 2D500B990D5A79CF00DBA0E3 /* QuartzCore.framework */; };
 		5078B52B0E3E43540004233A /* libcocos2d.a in Frameworks */ = {isa = PBXBuildFile; fileRef = 5018F24D0DFDEAC400C013A5 /* libcocos2d.a */; };
 		5078B5340E3E437F0004233A /* IntervalTest.m in Sources */ = {isa = PBXBuildFile; fileRef = 5078B5330E3E437F0004233A /* IntervalTest.m */; };
+		507D4E65102CBEA500A69927 /* tilespacing-test.tmx in Resources */ = {isa = PBXBuildFile; fileRef = 507D4E63102CBEA500A69927 /* tilespacing-test.tmx */; };
+		507D4E66102CBEA600A69927 /* tmw_desert_spacing.png in Resources */ = {isa = PBXBuildFile; fileRef = 507D4E64102CBEA500A69927 /* tmw_desert_spacing.png */; };
 		5084D25D0EE5906100BD237C /* powered.png in Resources */ = {isa = PBXBuildFile; fileRef = 5084D25C0EE5906100BD237C /* powered.png */; };
 		5084D47E0EE5C7D100BD237C /* btn-about-normal.png in Resources */ = {isa = PBXBuildFile; fileRef = 5084D4780EE5C7D100BD237C /* btn-about-normal.png */; };
 		5084D47F0EE5C7D100BD237C /* btn-about-selected.png in Resources */ = {isa = PBXBuildFile; fileRef = 5084D4790EE5C7D100BD237C /* btn-about-selected.png */; };
@@ -2068,6 +2070,8 @@
 		506E1AD50FB34E8E00AAA494 /* test-rgba1.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "test-rgba1.png"; sourceTree = "<group>"; };
 		5078B5320E3E437F0004233A /* IntervalTest.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; name = IntervalTest.h; path = tests/IntervalTest.h; sourceTree = "<group>"; };
 		5078B5330E3E437F0004233A /* IntervalTest.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; name = IntervalTest.m; path = tests/IntervalTest.m; sourceTree = "<group>"; };
+		507D4E63102CBEA500A69927 /* tilespacing-test.tmx */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.xml; path = "tilespacing-test.tmx"; sourceTree = "<group>"; };
+		507D4E64102CBEA500A69927 /* tmw_desert_spacing.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = tmw_desert_spacing.png; sourceTree = "<group>"; };
 		5084D25C0EE5906100BD237C /* powered.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = powered.png; sourceTree = "<group>"; };
 		5084D4780EE5C7D100BD237C /* btn-about-normal.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "btn-about-normal.png"; sourceTree = "<group>"; };
 		5084D4790EE5C7D100BD237C /* btn-about-selected.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "btn-about-selected.png"; sourceTree = "<group>"; };
@@ -3443,6 +3447,8 @@
 		503F5D0C101FEDAE002A37E5 /* tilemap */ = {
 			isa = PBXGroup;
 			children = (
+				507D4E63102CBEA500A69927 /* tilespacing-test.tmx */,
+				507D4E64102CBEA500A69927 /* tmw_desert_spacing.png */,
 				5023600E102237540005F2DE /* hexa-tiles.png */,
 				5023600F102237540005F2DE /* hexa-test.tmx */,
 				500426C31020D2730032274D /* iso-test1.tmx */,
@@ -5525,6 +5531,8 @@
 				500427D1102121C50032274D /* fixed-ortho-test2.png in Resources */,
 				50236010102237540005F2DE /* hexa-tiles.png in Resources */,
 				50236011102237540005F2DE /* hexa-test.tmx in Resources */,
+				507D4E65102CBEA500A69927 /* tilespacing-test.tmx in Resources */,
+				507D4E66102CBEA600A69927 /* tmw_desert_spacing.png in Resources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
